Fix: IE7 time slot layout overlaps

--- a/src/stylesheets/moj.slot-picker.sass
+++ b/src/stylesheets/moj.slot-picker.sass
@@ -88,6 +88,7 @@
 .SlotPicker-choices
 
   ul
+    zoom: 1
     margin: 0
     padding: 10px
     list-style-type: none
